# FLLM

./: .gitignore  FUTURE.md  README.md  pyproject.toml
fllm/: __main__.py  benchmark.py  chat.py  cli.py  compare.py  config.py  downloader.py  errors.py  launcher.py  metrics.py  openai_api.py  registry.py  remote.py  scout.py  selector.py  speculative.py  templates.py  webui.py
fllm/backends/: airllm.py  llamacpp.py  mlx.py  vllm.py
